--- a/estilos.css
+++ b/estilos.css
@@ -1,20 +1,21 @@
-body{
-background-color:rgb(1, 1, 12);
+body {
+  background-color: rgb(1, 1, 12);
 }
 
-h1{ 
-  font-family:"Bebas Neue", sans-serif;
- font-weight: 400;
+h1 { 
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
   font-style: normal;
   font-size: 68px;
   text-align: center;
   color: yellow;
 }
 
-p{
-  .bebas-neue-regular {
-  font-family: "Bebas Neue", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
+p {
+  font-family: "Noto Serif", serif;  /* ou Bebas Neue, se quiser manter */
+  font-size: 18px;
+  color: white;
+  text-align: justify;
+  margin: 20px;
+  line-height: 1.6;
 }
